<resources>
    <string name="app_name">Asthma Helper</string>
    <string name="app_description1">Guide you away from</string>
    <string name="app_description2">High polluted areas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_aqi">Air Quality Index (AQI)</string>
    <string name="title_setting">Settings</string>
    <string name="title_pollen_count">Pollen Count</string>
    <string name="air_pollution_level_good">Good:</string>
    <string name="air_pollution_level_moderate">Moderate:</string>
    <string name="air_pollution_level_poor">Poor:</string>
    <string name="air_pollution_level_unhealthy">Unhealthy:</string>
    <string name="air_pollution_level_very_unhealthy">Very Unhealthy:</string>
    <string name="pollen_count_level_low">Low:</string>
    <string name="pollen_count_level_medium">Medium:</string>
    <string name="pollen_count_level_high">High:</string>
    <string name="title_standards">Standards</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_app_permission">APP Permission</string>
    <string name="title_clear_data">Clear User Data</string>
    <string name="specification">Description</string>
    <string name="reset">Reset</string>
    <string name="setting_addresses">Frequently Used Addresses</string>
    <string name="title_gps">GPS</string>
    <string name="title_internet">Internet</string>
    <string name="title_notification">Notification</string>
    <string name="title_about">About</string>
    <string name="title_about_asthma_helper">About Asthma Helper</string>
    <string name="title_no_disturbing_time">No Disturbing Time</string>
    <string name="page_overview">Overview</string>
    <string name="page_navigation">Navigation</string>
    <string name="page_settings">Settings</string>
    <string name="tag_start_time">Start Time</string>
    <string name="default_start_time">23:00</string>
    <string name="tag_end_time">End Time</string>
    <string name="default_end_time">08:00</string>
    <string name="tag_start_point">From</string>
    <string name="hint_my_location">My Location</string>
    <string name="tag_destination">To</string>
    <string name="tag_search">Search</string>
    <string name="tag_driving">Driving</string>
    <string name="tag_walking">Walking</string>
    <string name="tag_bicycling">bicycling</string>
    <string name="tag_shortest">Shortest</string>
    <string name="tag_less_air_pollution">Less Air Pollution</string>
    <string name="tag_less_pollen_count">Less Pollen Count</string>
    <string name="tag_combination">Combination</string>
    <string name="title_air_pollution">Air Pollution</string>
    <string name="frequently_used_addresses_tip">Please click and select an address</string>
    <string name="title_description_of_aqi_setting">Description of AQI Setting</string>
    <string name="title_description_of_pollen_count_setting">Description of Pollen Count Setting</string>
    <string name="title_tip">Tip</string>
    <string name="tip_for_aqi">You probably do not want to change anything about the standards of Air Quality Index since it is defined by the US-EPA 2016 standard. For more details, see: http://aqicn.org/scale/</string>
    <string name="title_air_quality_index_scale_and_color_legend">Air Quality Index Scale and Color Legend</string>
    <string name="title_air_pollution_level">Air Pollution Level</string>
    <string name="title_health_implications">Health Implications</string>
    <string name="title_cautionary_statement">Cautionary Statement (for PM2.5)</string>
    <string name="level_good">Good</string>
    <string name="health_good">Air quality is considered satisfactory, and air pollution poses little or no risk</string>
    <string name="cautionary_good">None</string>
    <string name="level_moderate">Moderate</string>
    <string name="health_moderate">Air quality is acceptable; however, for some pollutants there may be a moderate health concern for a very small number of people who are unusually sensitive to air pollution</string>
    <string name="cautionary_moderate">Active children and adults, and people with respiratory disease, such as asthma, should limit prolonged outdoor exertion</string>
    <string name="level_poor">Poor</string>
    <string name="health_poor">Members of sensitive groups may experience health effects. The general public is not likely to be affected</string>
    <string name="cautionary_poor">Active children and adults, and people with respiratory disease, such as asthma, should limit prolonged outdoor exertion</string>
    <string name="level_unhealthy">Unhealthy</string>
    <string name="health_unhealthy">Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects</string>
    <string name="cautionary_unhealthy">Active children and adults, and people with respiratory disease, such as asthma, should avoid prolonged outdoor exertion; everyone else, especially children, should limit prolonged outdoor exertion</string>
    <string name="level_very_unhealthy">Very Unhealthy</string>
    <string name="health_very_unhealthy">Health warnings of emergency conditions. The entire population is more likely to be affected</string>
    <string name="cautionary_very_healthy">Active children and adults, and people with respiratory disease, such as asthma, should avoid all outdoor exertion; everyone else, especially children, should limit outdoor exertion</string>
    <string name="level_hazardous">Hazardous</string>
    <string name="health_hazardous">Health alert: everyone may experience more serious health effects</string>
    <string name="cautionary_hazardous">Everyone should avoid all outdoor exertion</string>
    <string name="title_current_standards">Current Standards</string>
    <string name="tip_for_pollen_count">It is recommended that you do not change the pollen index if you do not know them well. The categories are experience-based so you may want to adjust them based on your own experience. For more details, please see:\nhttp://www.weatherzone.com.au/pollen-index\nhttps://www.asthmaaustralia.org.au</string>
    <string name="level_low">Low</string>
    <string name="level_medium">Medium</string>
    <string name="level_high">High</string>
    <string name="level_extreme">Extreme</string>
    <string name="title_pollen_level">Pollen Level</string>
    <string name="health_low">Very few sufferers of pollen allergies would be expected to experience symptoms</string>
    <string name="health_extreme">Most sufferers of pollen allergies will experience symptoms and symptoms may be severe in some sufferers. The best precaution is to stay indoors</string>
    <string name="health_high">Many sufferers of pollen allergies will experience symptoms. It is better to stay away from sources of pollen</string>
    <string name="health_medium">Some sufferers of pollen allergies will experience symptoms, but these are unlikely to be severe</string>
    <string name="version">Asthma Helper 1.0</string>
    <string name="contact_information">If you have any suggestions about this APP\nfeel free to contact liuyijiang94@gmail.com</string>
    <string name="healthcommunities_information">HealthCommunities\nhttp://www.healthcommunities.com/</string>
    <string name="tips_sources">Tips Sources</string>
    <string name="epa_information">Environment Protection Authority | EPA Victoria\nhttp://epa.vic.gov.au/</string>
    <string name="wmo_information">World Meteorological Organization - surface synoptic observations (WMO-SYNOP)\nhttp://worldweather.wmo.int</string>
    <string name="data_sources">Data Sources</string>
</resources>
