<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_title_height"
        android:textColor="@color/white"
        android:textSize="@dimen/title"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/title_about_asthma_helper"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_below="@+id/title_bar"
        android:background="@color/light_gray">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/icon"
            android:layout_gravity="center_horizontal"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/gray"
            android:textSize="@dimen/context"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/contact_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/contact_information"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/context"
        android:gravity="center"
        android:autoLink="email"/>

    <TextView
        android:id="@+id/healthcommunities_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contact_information"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/healthcommunities_information"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/context"
        android:gravity="center"
        android:autoLink="web"/>

    <TextView
        android:id="@+id/title_tips_sources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/healthcommunities_information"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/tips_sources"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/context_title"
        android:gravity="center"/>

    <TextView
        android:id="@+id/epa_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/title_tips_sources"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/epa_information"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/context"
        android:gravity="center"
        android:autoLink="web"/>

    <TextView
        android:id="@+id/wmo_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/epa_information"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/wmo_information"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/context"
        android:gravity="center"
        android:autoLink="web"/>

    <TextView
        android:id="@+id/title_data_sources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wmo_information"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/data_sources"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/context_title"
        android:gravity="center"/>

</RelativeLayout>