<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.liuyijiang.asthmahelper.MainActivity">

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menu_container">
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal"
        android:paddingTop="2.5dp"
        android:background="@drawable/top_second_light_bg_white"
        android:layout_alignParentBottom="true">

        <com.liuyijiang.asthmahelper.tool.SettingTitleView
            android:id="@+id/button_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:drawable_src_top="@mipmap/map"
            app:drawable_height_top="26dp"
            app:drawable_width_top="25.39dp"
            android:text="@string/page_overview"
            android:textColor="@color/second_light_gray"
            android:textSize="@dimen/hint"
            android:gravity="center_horizontal"
            tools:ignore="SpUsage" />

        <com.liuyijiang.asthmahelper.tool.SettingTitleView
            android:id="@+id/button_navigation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:drawable_src_top="@mipmap/compass"
            app:drawable_height_top="26dp"
            app:drawable_width_top="25.83dp"
            android:text="@string/page_navigation"
            android:textColor="@color/second_light_gray"
            android:textSize="@dimen/hint"
            android:gravity="center_horizontal"
            tools:ignore="SpUsage" />

        <com.liuyijiang.asthmahelper.tool.SettingTitleView
            android:id="@+id/button_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:drawable_src_top="@mipmap/gear"
            app:drawable_height_top="26dp"
            app:drawable_width_top="22.88dp"
            android:text="@string/page_settings"
            android:textColor="@color/second_light_gray"
            android:textSize="@dimen/hint"
            android:gravity="center_horizontal"
            tools:ignore="SpUsage" />

    </LinearLayout>

</RelativeLayout>
